2007-07-30  Vitaly Alexeev <tishka92@yahoo.com>
	
		* gameswf/gameswf_dlist.cpp: reverted to prev version,
		some tests are broken, this requires more deep analize

2007-07-30  Vitaly Alexeev <tishka92@yahoo.com>
	
		* gameswf/gameswf_dlist.cpp: Fixed cross-link memory leak bug
		that is the effect of code like
		clip.myvar = clip;

2007-07-29  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_action.cpp: Fix delete operator.  Should only
	clear the specified object member; it should not affect the object
	pointed to by that member.

	* gameswf/gameswf_batch_test.py: Add
	tests/test_delete_references.txt to the list of passing tests.

2007-07-29  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/samples/test_delete_references.as
	* gameswf/samples/test_delete_references.swf
	* gameswf/tests/test_delete_references.txt
	Added a test to demonstrate that 'delete' operator is wrong -- it
	should only clear the reference; it should not clear the objects
	pointed to by the deleted reference.  Will fix in a subsequent
	change.

	* gameswf/gameswf_action.cpp: Fixed call_method opcode; method
	calls should work on functions.

	* gameswf/gameswf_function.h: Fixed memory bug with as_as_function
	-- m_properties cannot be of type as_object, it must be a pointer
	to as_object.  Otherwise, the as_object ref_counted destructor
	tries to delete itself, which is invalid.

	* base/Makefile: compile fix, add tu_loadlib.cpp

2007-07-29  Vitaly Alexeev <tishka92@yahoo.com>
	
	Continuation of struggle against memory leaks
	* gameswf/gameswf.h
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_environment.cpp
	* gameswf/gameswf_environment.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_object.cpp
	* gameswf/gameswf_object.h
	* gameswf/gameswf_root.cpp
	* gameswf/gameswf_root.h
	* gameswf/gameswf_sprite.cpp
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_test_ogl.cpp
	* gameswf/gameswf_text.cpp