@@ -1,5 +1,9 @@
 2007-07-30  Vitaly Alexeev <tishka92@yahoo.com>
 	
+		* gameswf/gameswf_as_classes/as_broadcaster.cpp: fixed sendmessage()
+
+2007-07-30  Vitaly Alexeev <tishka92@yahoo.com>
+	
 		* gameswf/gameswf_dlist.cpp: reverted to prev version,
 		some tests are broken, this requires more deep analize
 
